<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizz_app">Quizz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="submit">SUBMIT</string>
    <string name="progress_initial">0/10</string>
    <string name="TextView_dummy1">Apple</string>
    <string name="TextView_dummy2">Google</string>
    <string name="TextView_dummy3">Android Inc.</string>
    <string name="TextView_dummy4">Nokia</string>
    <string name="progress">%d/%d</string>
    <string name="resultScore">Your Score is %d out of %d</string>
    <string name="questionimage">questionImage</string>
    <string name="finish">FINISH</string>
    <string name="finishGame">START AGAIN</string>
    <string name="go_to">GO TO NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="trophy">image</string>
    <string name="congratulations">Hey, %s</string>
    <string name="flags">Flags</string>
</resources>